# skinAnalysis

./: Dockerfile  pulumi.py  pyproject.toml
models/face_segmentation/: skin_detection.py
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  face-generation-406413-ef6985e7d27c.json
web_api/: main.py
web_api/face_segmentation/: main.py
