[tool.poetry]
name = "skinanalysis"
version = "0.1.0"
description = ""
authors = ["jiyeon <ivjiyeonb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
opencv-python = "^4.8.0.76"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
python-multipart = "^0.0.6"
ujson = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
